# K4aGrabber

./: CMakeLists.txt  README.md  Source_pcl.cpp  k4a_grabber.cpp  k4a_grabber.h
PCL_Grabber_OneKinect/: Source_pcl.cpp
PCL_Grabber_TwoKinects/: Source_pcl.cpp
include/: k4a_grabber.h
